# taxi-demand-prediction

./: .gitignore  pyproject.toml
.github/workflows/: feature_pipeline.yaml
notebook/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_timeseries_data_into_features_and_tartgets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_baseline_model.ipynb  06_xgboost_model.ipynb  07_lightgbm_mode.ipynb  08_light_gbm_model_with_feature_ engineering.ipynb  09_lightgbm_model_with_hyperparameter.ipynb  10_backfill_feature_store.ipynb  11_feature_pipeline.ipynb
src/: config.py  data.py  data_split.py  model.py
